chat-with-her-clone-draft

--- a/chat.html
+++ b/chat.html
@@ -93,6 +93,8 @@
 
     <div id="no-mobile">모니터 화면 크기를 줄이세요.</div>
 
+    <audio autoplay="true" src="files/chatting-with-her.mp3"></audio>
+
 
     <script
       src="https://kit.fontawesome.com/00bff72823.js"
