--- a/chats.html
+++ b/chats.html
@@ -39,9 +39,12 @@
             src="https://64.media.tumblr.com/9c764eb5adc2827507c10eb98eeb40a6/ad5f45ea4bed9edc-c9/s1280x1920/062d68923d1127121701d0b16c0c741c260c9f7d.png"
         /></span>
         <span class="screen-header__music"
-          ><img
-            src="https://64.media.tumblr.com/f12e03e929be11270ecdc6702a2f1d72/e26b86712300ddd4-e0/s1280x1920/db9faf00d1ff16c048e7114698d313797f2bfb3c.png"
-        /></span>
+          ><a
+            target="”_blank”"
+            href="https://nomad-coders-kokoa-clone-challenge-11-jungmin.jungminyoonoffi.repl.co/"
+            ><img
+              src="https://64.media.tumblr.com/f12e03e929be11270ecdc6702a2f1d72/e26b86712300ddd4-e0/s1280x1920/db9faf00d1ff16c048e7114698d313797f2bfb3c.png" /></a
+        ></span>
         <span class="screen-header__bin"
           ><img
             src="https://64.media.tumblr.com/1643675fb824fa89f6238b67baed8353/de0578edde7eb093-41/s1280x1920/64cfc67dfbf7fe16309b14e72bda96e365ac1da3.png"
@@ -50,7 +53,7 @@
     </header>
 
     <main class="chats-screen">
-      <a href="chat.html">
+      <a id="chat-hover" href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
             <img
@@ -67,6 +70,46 @@
           <div class="user-component__column">
             <span class="user-component__time">1분전</span>
             <span class="badge">2통</span>
+          </div>
+        </div>
+      </a>
+
+      <a id="chat-hover" href="chat-fox.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://64.media.tumblr.com/89e3cc9a20395e0748ee901ad57ac5a0/81483ee660c639de-ed/s1280x1920/daa097118d2e1be160c13095f1d2e956c7d0d476.png"
+              class="user-component__avatar user-component__avatar--spacing"
+            />
+            <div class="user-component__text chats">
+              <h4 class="user-component__title">복어빛</h4>
+              <h6 class="user-component__subtitle">
+                너랑 함께 다니는게 좋을 것 같애서
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">6분전</span>
+            <span class="badge">1통</span>
+          </div>
+        </div>
+      </a>
+
+      <a id="chat-hover" href="chat-who-are-you.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://64.media.tumblr.com/3a0a6a2aed96741709ab8717e3318818/76c94287993d6a1d-61/s1280x1920/b3f1e91509eafedee01916136fce2a4304211578.png"
+              class="user-component__avatar user-component__avatar--spacing"
+            />
+            <div class="user-component__text chats">
+              <h4 class="user-component__title">지형태</h4>
+              <h6 class="user-component__subtitle">투명인간 친구란 말 알아?</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">8분전</span>
+            <span class="badge">3통</span>
           </div>
         </div>
       </a>
@@ -102,7 +145,7 @@
         </li>
       </ul>
     </nav>
-    <div id="no-mobile">모니터 화면 크기를 줄이세요.</div>
+
     <script
       src="https://kit.fontawesome.com/00bff72823.js"
       crossorigin="anonymous"
