--- a/find.html
+++ b/find.html
@@ -31,9 +31,12 @@
       <h1 class="screen-header__title">자/유/게/시/판</h1>
       <div class="screen-header__icons">
         <span class="screen-header__music"
-          ><img
-            src="https://64.media.tumblr.com/f12e03e929be11270ecdc6702a2f1d72/e26b86712300ddd4-e0/s1280x1920/db9faf00d1ff16c048e7114698d313797f2bfb3c.png"
-        /></span>
+          ><a
+            target="”_blank”"
+            href="https://nomad-coders-kokoa-clone-challenge-11-jungmin.jungminyoonoffi.repl.co/"
+            ><img
+              src="https://64.media.tumblr.com/f12e03e929be11270ecdc6702a2f1d72/e26b86712300ddd4-e0/s1280x1920/db9faf00d1ff16c048e7114698d313797f2bfb3c.png" /></a
+        ></span>
         <span class="screen-header__bin"
           ><img
             src="https://64.media.tumblr.com/1643675fb824fa89f6238b67baed8353/de0578edde7eb093-41/s1280x1920/64cfc67dfbf7fe16309b14e72bda96e365ac1da3.png"
