--- a/friends.html
+++ b/friends.html
@@ -35,9 +35,12 @@
             src="https://64.media.tumblr.com/9c764eb5adc2827507c10eb98eeb40a6/ad5f45ea4bed9edc-c9/s1280x1920/062d68923d1127121701d0b16c0c741c260c9f7d.png"
         /></span>
         <span class="screen-header__music"
-          ><img
-            src="https://64.media.tumblr.com/f12e03e929be11270ecdc6702a2f1d72/e26b86712300ddd4-e0/s1280x1920/db9faf00d1ff16c048e7114698d313797f2bfb3c.png"
-        /></span>
+          ><a
+            target="”_blank”"
+            href="https://nomad-coders-kokoa-clone-challenge-11-jungmin.jungminyoonoffi.repl.co/"
+            ><img
+              src="https://64.media.tumblr.com/f12e03e929be11270ecdc6702a2f1d72/e26b86712300ddd4-e0/s1280x1920/db9faf00d1ff16c048e7114698d313797f2bfb3c.png" /></a
+        ></span>
         <span class="screen-header__bin"
           ><img
             src="https://64.media.tumblr.com/1643675fb824fa89f6238b67baed8353/de0578edde7eb093-41/s1280x1920/64cfc67dfbf7fe16309b14e72bda96e365ac1da3.png"
@@ -158,6 +161,15 @@
         </li>
       </ul>
     </nav>
+
+    <div id="splash-screen">
+      <img
+        src="https://64.media.tumblr.com/46ac9d3bdf53f02479a783803bb36256/e659e472f27529b6-66/s1280x1920/02b594fac8f571042bfc977bf6bfebe69b206f9b.gifv"
+      />
+      <span class="splash-screen__title">이틀전에 죽은 그녀와의 채팅은...</span>
+      <span class="splash-screen__title">자우림(Jaurim)</span>
+    </div>
+
     <div id="no-mobile">모니터 화면 크기를 줄이세요.</div>
     <script
       src="https://kit.fontawesome.com/00bff72823.js"
