1. input, button font-family: inherit

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span>윈도우 97</span>
-        <<i class="fa-brands fa-internet-explorer"></i>>
+        <img
+          class="status-bar__icon"
+          src="https://64.media.tumblr.com/35da443488db8733f3348444d0e14960/699607e400590367-c9/s1280x1920/1421dbdc3d99e6ee119523b51e5cc24096719a58.png"
+        />
       </div>
       <div class="status-bar__column">
         <span>오전 4시 20분</span>
       </div>
       <div class="status-bar__column">
-        <i class="fa-regular fa-window-minimize"></i>
-        <i class="fa-regular fa-window-restore"></i>
-        <i class="fa-solid fa-xmark"></i>
+        <div class="border">
+          <i class="fa-regular fa-window-minimize"></i>
+        </div>
+        <div class="border"><i class="fa-regular fa-window-restore"></i></div>
+        <div class="border"><i class="fa-solid fa-xmark"></i></div>
       </div>
     </div>
 
