--- a/friends.html
+++ b/friends.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>친/구/찾/아/요</title>
   </head>
-  <body>
+  <body id="friends-screen-main">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>윈도우 97</span>
