--- a/poem.html
+++ b/poem.html
@@ -37,11 +37,12 @@
         /></a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title poem-title">실패할 수 있는 용기</h1>
+        <h1 class="alt-header__title poem-title">오늘의 시</h1>
       </div>
       <div class="alt-header__column"></div>
     </header>
     <div class="poem-screen">
+      <h3>실패할 수 있는 용기</h3>
       <p>눈부신 아침은</p>
       <p>하루에 두 번 오지 않습니다.</p>
       <p>찬란한 그대 젊음도</p>
